--- a/app/config/config.json
+++ b/app/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
+    "username": "v53937aguf8tkxoo",
+    "password": "ri1nkw8ikcddgb08",
     "database": "database_production",
-    "host": "127.0.0.1",
+    "host": "sulnwdk5uwjw1r2k.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql",
     "use_env_variable": "JAWSDB_URL"
   }
